updated icon url

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="bg-wrapper">
           <nav class="container">
               <figure>
-                  <img src="..\setmore-multi-location\Resources\Images\ink.svg" alt="Tatoo Salon Logo">
+                  <img src="drop.svg" alt="Tatoo Salon Logo">
               </figure>
               <ul class="nav-links">
                   <li><a href="#">Home</a></li>
