fixed typo in a span tag

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             </figure>
             <figure>
               <img src="https://i.ibb.co/xh2ZbZD/cus-2.jpg" alt="">
-              <span>We're Extremely Friendly</span>>
+              <span>We're Extremely Friendly</span>
             </figure>
             <figure>
               <img src="https://i.ibb.co/WkSHYXJ/cust-3.jpg" alt="">
